# boto_task

./: .gitignore  Makefile  README.md  alembic.ini  licence  main.py  pyproject-old.toml  pyproject.toml  readme.md  test_main.http
config/: __init__.py  config.py  config.toml.dist  logger.py  structures.py
dao/: __init__.py  base.py  links_dao.py
db/: __init__.py  base.py  db.sqlite  utils.py
db/dao/: __init__.py  base.py  short_links.py
db/migrations/: env.py
db/migrations/versions/: 2024-01-25_18-03-06_add_shortlinks.py  2024-01-25_19-56-add_status_code.py  2024-01-26_10-42-45_rename_url_field.py
db/models/: __init__.py  shor_links.py
endpoints/: short_links.py  utils.py  validators.py
src/: config.py  dao.py
src/endpoints/: __init__.py  short_links.py  utils.py  validators.py
src/logger/: config.toml.dist  logger.py  logger.toml.dist  structures.py
tests/: conftest.py  mocked_bot.py  test_dao.py  test_endpoints.py  utils.py
tests/bot/: conftest.py  test_bot.py
tests/config/: t_config.toml  t_logger.toml  test_config.py
tests/db/: conftest.py  test_base_dao.py  test_user_dao.py  utils.py
