[tool.poetry]
name = "boto-task"
version = "0.1.0"
description = ""
authors = ["Seliverstov <seli@verstov.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
httpx = "^0.26.0"
pydantic = "^2.5.3"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
