[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "url-shortener"
dynamic = ["version"]
description = 'url_shortener_fastapi'
readme = "README.md"
requires-python = "3.12"
license = "MIT"
keywords = []
authors = [
    { name = "Seliverstov", email = "seliverstov@boto.education" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "alembic==1.13.1",
    "aiosqlite==0.19.0",
    "loguru==0.7.2"
]

#[[tool.hatch.envs.pypy]]
#python = ["pypy3.10"]

[tool.hatch.envs.default]
python = ["3.11", "3.12", "pypy3.10"]
dependencies = [
    "coverage[toml]>=6.5",
    "httpx",
    "pytest_asyncio",
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]


[tool.black]
target-version = ["py312"]
line-length = 127
skip-string-normalization = true

